force-app/main/default/objects/Registration_Account__c/fields/Agent_for_Service_of_Process__c.field-meta.xml
<CustomField>
    <fullName>Agent_for_Service_of_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <description>used in Garment Registration if Corp or LLC</description>
    <inlineHelpText>Check if Agent for Service of Process</inlineHelpText>
    <label>Agent for Service of Process</label>
    <type>Checkbox</type>
</CustomField>