force-app/main/default/objects/Registration_Account__c/fields/AgentofServiceFirstName__c.field-meta.xml
<CustomField>
    <fullName>AgentofServiceFirstName__c</fullName>
    <label>Agent of Service First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>