force-app/main/default/objects/Registration_Account__c/fields/Applicant_ID__c.field-meta.xml
<CustomField>
    <fullName>Applicant_ID__c</fullName>
    <formula>Registration__r.Applicant__r.AccountId</formula>
    <label>Applicant ID</label>
    <type>Text</type>
</CustomField>