force-app/main/default/objects/Registration_Account__c/fields/ATI_Number__c.field-meta.xml
<CustomField>
    <fullName>ATI_Number__c</fullName>
    <description>Used in Talent Agency for Managers</description>
    <label>ATI Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>