force-app/main/default/objects/Registration_Account__c/fields/Attachment_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Identifier__c</fullName>
    <formula>IF( Registration__r.RecordType.DeveloperName == 'Talent_Agency', 'TA-MGMT', '')
&amp;
IF(( Registration__r.RecordType.DeveloperName == 'Garment_Manufacturers_and_Contractors') &amp;&amp; (RecordType.DeveloperName == 'Management_Individual') , 'GA-MGMT-DL', '')
&amp;
IF(( Registration__r.RecordType.DeveloperName == 'Farm_Labor_Contractor') &amp;&amp; (RecordType.DeveloperName == 'County') , 'FLC-COUNTY', '')
&amp;
IF(( Registration__r.RecordType.DeveloperName == 'Farm_Labor_Contractor') &amp;&amp; (RecordType.DeveloperName == 'Driver') , ';FLC-DRIVER-DL;FLC-DRIVER-DR', '')
&amp;
IF(( Registration__r.RecordType.DeveloperName == 'Farm_Labor_Contractor') &amp;&amp; (RecordType.DeveloperName == 'Individual_Entity') , ';FLC-ENTITY-FLCE-CARD', '')
&amp;
IF(( Registration__r.RecordType.DeveloperName == 'Farm_Labor_Contractor') &amp;&amp; (RecordType.DeveloperName == 'Vehicle') , ';FLC-VEH-OWN-INS;FLC-DMV-CERT', '')
&amp;
IF(( Registration__r.RecordType.DeveloperName == 'Farm_Labor_Contractor') &amp;&amp; (RecordType.DeveloperName == 'Labor_Camp_or_Lodging') , ';FLC-HL', '')
&amp;
IF(( Registration__r.RecordType.DeveloperName == 'Farm_Labor_Contractor') &amp;&amp; (RecordType.DeveloperName == 'Management_Individual') , ';FLC-MGMT-SHP', '')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attachment Identifier</label>
    <type>Text</type>
</CustomField>