force-app/main/default/objects/Registration_Account__c/fields/Business_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Contact_Name__c</fullName>
    <description>Business Contact Name</description>
    <label>Business Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>