force-app/main/default/objects/Registration_Account__c/fields/Business_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Name__c</fullName>
    <description>Used in Garment Registration</description>
    <inlineHelpText>Enter Business Name</inlineHelpText>
    <label>Business Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>