force-app/main/default/objects/Registration_Account__c/fields/Business_Phone__c.field-meta.xml
<CustomField>
    <fullName>Business_Phone__c</fullName>
    <description>Map to Phone on Account</description>
    <inlineHelpText>Enter 10 digits with no dashes or spaces</inlineHelpText>
    <label>Daytime Phone</label>
    <type>Phone</type>
</CustomField>