force-app/main/default/objects/Registration_Account__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <description>Customer Name</description>
    <label>Customer Name/Business Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>