force-app/main/default/objects/Registration_Account__c/fields/End_Date_of_Registration__c.field-meta.xml
<CustomField>
    <fullName>End_Date_of_Registration__c</fullName>
    <description>Used in Garment Registration</description>
    <inlineHelpText>Enter End Date of Registration</inlineHelpText>
    <label>End Date of Registration</label>
    <type>Date</type>
</CustomField>