force-app/main/default/objects/Registration_Account__c/fields/Family_Member_Name__c.field-meta.xml
<CustomField>
    <fullName>Family_Member_Name__c</fullName>
    <description>used in Garment Registration to enter for Other Garment Company involvement</description>
    <inlineHelpText>Enter Family member involvement</inlineHelpText>
    <label>Family Member Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>