force-app/main/default/objects/Registration_Account__c/fields/FLCE_Number__c.field-meta.xml
<CustomField>
    <fullName>FLCE_Number__c</fullName>
    <description>Used for FLC registration account record type Entity</description>
    <inlineHelpText>Enter FLCE Number</inlineHelpText>
    <label>FLCE Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>