force-app/main/default/objects/Registration_Account__c/fields/FLCs_Last_10Yrs__c.field-meta.xml
<CustomField>
    <fullName>FLCs_Last_10Yrs__c</fullName>
    <description>Used for FLC account record type Entity</description>
    <inlineHelpText>Enter FLCs Last 10 Years</inlineHelpText>
    <label>FLCs Last 10Yrs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>