force-app/main/default/objects/Registration_Account__c/fields/Foreign_Address__c.field-meta.xml
<CustomField>
    <fullName>Foreign_Address__c</fullName>
    <description>Mapped to Foreign_Address__c Account field.</description>
    <inlineHelpText>If your business has a foreign address, please enter that address here.</inlineHelpText>
    <label>Foreign Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>