force-app/main/default/objects/Registration_Account__c/fields/Garment_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Garment_Registration_Number__c</fullName>
    <description>Used in Garment Registration</description>
    <inlineHelpText>Enter Garment Registration Number</inlineHelpText>
    <label>Garment Registration Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>