force-app/main/default/objects/Registration_Account__c/fields/Good_standing_with_CA_Secretary_of_State__c.field-meta.xml
<CustomField>
    <fullName>Good_standing_with_CA_Secretary_of_State__c</fullName>
    <description>Mapped to Good_standing_with_CA_Secretary_of_State__c Account field.</description>
    <label>Good standing with CA Secretary of State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>