force-app/main/default/objects/Registration_Account__c/fields/Have_you_passed_the_exam__c.field-meta.xml
<CustomField>
    <fullName>Have_you_passed_the_exam__c</fullName>
    <description>Exam passed or failed</description>
    <inlineHelpText>Have you passed the exam?</inlineHelpText>
    <label>Have you passed the exam?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>A4883730</fullName>
                <isActive>false</isActive>
                <label>A4883730</label>
            </value>
            <value>
                <fullName>CA</fullName>
                <isActive>false</isActive>
                <label>CA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>