force-app/main/default/objects/Registration_Account__c/fields/Health_License_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Health_License_Effective_Date__c</fullName>
    <description>Health License Effective Date for FLC Labor Camp or Lodging</description>
    <label>Health License Effective Date</label>
    <type>Date</type>
</CustomField>