force-app/main/default/objects/Registration_Account__c/fields/I_Am_this_Manager__c.field-meta.xml
<CustomField>
    <fullName>I_Am_this_Manager__c</fullName>
    <description>Allows the applicant to note that they are the manager who's information is being entered</description>
    <inlineHelpText>Select "Yes" or "No" to indicate if the name and address for the login account matches this person</inlineHelpText>
    <label>Is this information for yourself?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>