force-app/main/default/objects/Registration_Account__c/fields/Inactive__c.field-meta.xml
<CustomField>
    <fullName>Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to denote that the Registration Account record is no longer active.</description>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>