force-app/main/default/objects/Registration_Account__c/fields/Inactive_Date__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Date__c</fullName>
    <description>Date field to denote that the Registration Account record was deactivated.</description>
    <label>Date Deactivated</label>
    <type>Date</type>
</CustomField>