force-app/main/default/objects/Registration_Account__c/fields/Insurance_Carrier_Name__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Carrier_Name__c</fullName>
    <description>Vehicle Insurance Carrier Name</description>
    <label>Insurance Carrier Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>