force-app/main/default/objects/Registration_Account__c/fields/Insurance_Policy_Coverage_Limits__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Policy_Coverage_Limits__c</fullName>
    <description>Vehicle Insurance Policy Coverage Limits</description>
    <label>Insurance Policy Coverage Limits</label>
    <length>255</length>
    <type>Text</type>
</CustomField>