force-app/main/default/objects/Registration_Account__c/fields/Insurance_Policy_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Policy_Expiration_Date__c</fullName>
    <description>Insurance Policy Expiration Date</description>
    <label>Insurance Policy Expiration Date</label>
    <type>Date</type>
</CustomField>