force-app/main/default/objects/Registration_Account__c/fields/Insurance_Policy_Medical_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Policy_Medical_Coverage__c</fullName>
    <label>Insurance Policy Medical Coverage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>