force-app/main/default/objects/Registration_Account__c/fields/Insurance_Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Policy_Number__c</fullName>
    <description>Vehicle Insurance Policy Number</description>
    <label>Insurance Policy Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>