force-app/main/default/objects/Registration_Account__c/fields/IsPerson__c.field-meta.xml
<CustomField>
    <fullName>IsPerson__c</fullName>
    <description>Looks at the record type to determine if the registration account references a person or a business. This determines what type of account is created when the registration is approved.</description>
    <formula>IF (
RecordType.DeveloperName = 'Agent' 
|| RecordType.DeveloperName = 'Management_Individual'
|| RecordType.DeveloperName = 'Sole_Proprietorship'
|| RecordType.DeveloperName = 'Individual_Permit'
|| RecordType.DeveloperName = 'Parent_Guardian',
TRUE , FALSE )</formula>
    <label>IsPerson</label>
    <type>Checkbox</type>
</CustomField>