force-app/main/default/objects/Registration_Account__c/fields/Joint_Venture_Company_Type__c.field-meta.xml
<CustomField>
    <fullName>Joint_Venture_Company_Type__c</fullName>
    <description>3/22 PS changed label to Entity type.</description>
    <label>Entity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporation</fullName>
            </value>
            <value>
                <fullName>LLC</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
                <label>General Partnership</label>
            </value>
            <value>
                <fullName>Limited Partnership</fullName>
                <label>LLP/LP</label>
            </value>
            <value>
                <fullName>Sole Proprietorship</fullName>
            </value>
            <value>
                <fullName>Joint Venture</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>