force-app/main/default/objects/Registration_Account__c/fields/Latitude__c.field-meta.xml
<CustomField>
    <fullName>Latitude__c</fullName>
    <description>Latitude for coordinates</description>
    <label>Latitude</label>
    <length>32</length>
    <type>Text</type>
</CustomField>