force-app/main/default/objects/Registration_Account__c/fields/Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_ID__c</fullName>
    <description>Holds legacy system's record ID</description>
    <label>Legacy ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>