force-app/main/default/objects/Registration_Account__c/fields/Live_Scan_Operator_Name__c.field-meta.xml
<CustomField>
    <fullName>Live_Scan_Operator_Name__c</fullName>
    <description>Used in Talent Agency for Managers</description>
    <label>Live Scan Operator Name</label>
    <length>36</length>
    <type>Text</type>
</CustomField>