force-app/main/default/objects/Registration_Account__c/fields/Longitude__c.field-meta.xml
<CustomField>
    <fullName>Longitude__c</fullName>
    <description>Longitude for coordinates</description>
    <label>Longitude</label>
    <length>32</length>
    <type>Text</type>
</CustomField>