force-app/main/default/objects/Registration_Account__c/fields/LSID_Number__c.field-meta.xml
<CustomField>
    <fullName>LSID_Number__c</fullName>
    <description>Used in Talent Agency for Managers</description>
    <label>LSID Number</label>
    <length>36</length>
    <type>Text</type>
</CustomField>