force-app/main/default/objects/Registration_Account__c/fields/Mailing_Address_Line_3__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address_Line_3__c</fullName>
    <label>Mailing Address Line 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>