force-app/main/default/objects/Registration_Account__c/fields/Mailing_State__c.field-meta.xml
<CustomField>
    <fullName>Mailing_State__c</fullName>
    <description>Map to standard ShippingAddress field on Account</description>
    <label>Mailing State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State_Abbreviations</valueSetName>
    </valueSet>
</CustomField>