force-app/main/default/objects/Registration_Account__c/fields/Mailing_Street__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Street__c</fullName>
    <description>Map to standard ShippingAddress field on Account</description>
    <label>Mailing Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>