force-app/main/default/objects/Registration_Account__c/fields/Manager_Nintex_Email__c.field-meta.xml
<CustomField>
    <fullName>Manager_Nintex_Email__c</fullName>
    <formula>IF(Email_Address__c = Registration__r.Applicant_s_Email__c,"",Email_Address__c)</formula>
    <label>Manager Nintex Email</label>
    <type>Text</type>
</CustomField>