force-app/main/default/objects/Registration_Account__c/fields/Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Phone__c</fullName>
    <inlineHelpText>Phone number must be 10 numbers (no dashes or spaces.)</inlineHelpText>
    <label>Mobile Phone</label>
    <type>Phone</type>
</CustomField>