force-app/main/default/objects/Registration_Account__c/fields/Number_of_individuals_perform_Janitorial__c.field-meta.xml
<CustomField>
    <fullName>Number_of_individuals_perform_Janitorial__c</fullName>
    <label>Number of individuals perform Janitorial</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>