force-app/main/default/objects/Registration_Account__c/fields/Number_of_Registration_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Registration_Accounts__c</fullName>
    <description>Updated via process builder</description>
    <label>Number of Registration Accounts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>