force-app/main/default/objects/Registration_Account__c/fields/Other_Language__c.field-meta.xml
<CustomField>
    <fullName>Other_Language__c</fullName>
    <description>Used to enter other languages</description>
    <inlineHelpText>Enter Language</inlineHelpText>
    <label>Other Language</label>
    <length>50</length>
    <type>Text</type>
</CustomField>