force-app/main/default/objects/Registration_Account__c/fields/Physical_Business_Line_3__c.field-meta.xml
<CustomField>
    <fullName>Physical_Business_Line_3__c</fullName>
    <label>Physical Business Address Line 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>